[tool.poetry]
name = "match-slides-to-recording"
version = "0.1.0"
description = ""
authors = ["phiresky <phireskyde+git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typed-argument-parser = "^1.6.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
